# px4_control

./: CMakeLists.txt  README.md  package.xml
Extras/: Bilbo.rviz  BilboInspection.rviz  Frodo.rviz  FrodoInspection.rviz  FrodoInspectionMapper.rviz  Gazebo.rviz  Sauron.rviz  SauronCollisionAvoidance.rviz  SauronInspection.rviz  SetParametersGazebo.m  SwarmInspection.rviz  bilbo.rviz  rvizConfig.rviz
action/: follow_PVAJS_trajectory.action
launch/: .stack.launch.swp  360Dragonfly.launch  360Phoenix.launch  360SDF-2.launch  360_group.launch  360_group_gazebo.launch  360_shell.launch  360_tourn.launch  360df_aggressive.launch  360df_hover.launch  360df_quad2.launch  360df_quad_luci.launch  360df_timing.launch  360gazebo.launch  360gryphon.launch  360valkyrie.launch  belle.launch  bilbo.launch  cindy.launch  default360DF.launch  frodo.launch  gazebo.launch  gryphon.launch  gryphonStack.launch  gryphonStackMachine.launch  harryStack.launch  harryStackMachine.launch  hermioneStack.launch  hermioneStackMachine.launch  hippogryphStack.launch  hippogryphStackMachine.launch  intel_aero_group.launch  joy.launch  joyPhoenix.launch  joy_6quads.launch  joy_default.launch  joy_relay.launch  joy_shell.launch  joyless_quadLaunchStack.launch  lm_bilbo.launch  (+27 more)
src/: globals.h  px4_control.cpp  structs.cpp  structs.h
src/Actions/: actions.h
src/Callbacks/: callbacks.cpp  callbacks.h
src/HelperFunctions/: QuatRotEuler.cpp  QuatRotEuler.h  helper.cpp  helper.h  visualization_functions.cpp  visualization_functions.h
src/JoyDrivers/: joyDrivers.cpp
src/PosControl/: PosControl.cpp  PosControl.h  PosControlKinetic.cpp
src/Services/: services.cpp  services.h
src/Threads/: FSMTask.cpp  FSMTask.h  FSMTaskKinetic.cpp  commPub.cpp  commPub.h  commPubKinetic.cpp  commPubKinetic.h  joyTask.cpp  joyTask.h  visualization_thread.cpp  visualization_thread.h  watchdogs.cpp  watchdogs.h
